--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -131,6 +131,10 @@ h6 {
   }
 }
 
+.br-15{
+  border-radius: 15px!important;
+}
+
 /*--------------------------------------------------------------
 # Global Header
 --------------------------------------------------------------*/
